<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B2E92"
    tools:context=".MainActivity"
    tools:ignore="ContentDescription">


    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="302dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="374dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:background="@drawable/button2_style"
        android:ems="10"
        android:hint="Enter Password"
        android:inputType="textPassword"
        android:text=""
        android:textAlignment="center"
        android:textSize="25sp"
        tools:ignore="Autofill,HardcodedText,LabelFor,SpUsage" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="222dp"
        android:layout_height="156dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="153dp"
        android:layout_marginEnd="97dp"
        android:layout_marginRight="97dp"
        android:background="@drawable/ic_account_circle_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/buttonCode"
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextCode"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="433dp"
        android:layout_marginEnd="94dp"
        android:layout_marginRight="94dp"
        android:layout_marginBottom="220dp"
        android:background="@drawable/button_style"
        android:text="Login"
        android:textColor="#f8f4ff"
        android:textSize="25sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,RtlHardcoded" />

    <EditText
        android:id="@+id/editTextCode"
        android:layout_width="302dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="58dp"
        android:layout_marginRight="58dp"
        android:background="@drawable/button2_style"
        android:ems="10"
        android:hint="Enter Code"
        android:text=""
        android:textAlignment="center"
        android:textSize="25sp"
        tools:ignore="Autofill,HardcodedText,LabelFor,SpUsage" />

</RelativeLayout>