...
                android:typeface="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText,RtlHardcoded" />

            <Button
                android:id="@+id/buttonSend"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
...
                android:typeface="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText,RtlHardcoded" />

            <Button
                android:id="@+id/buttonConnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
...
                android:layout_marginTop="58dp"
                android:text="Connect"
                android:textSize="12sp"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/buttonDisconnect"
                android:layout_width="113dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="19dp"
                android:layout_marginLeft="19dp"
                android:layout_marginTop="58dp"
                android:layout_marginEnd="22dp"
                android:layout_marginRight="22dp"
                android:layout_toStartOf="@+id/buttonPrint"
                android:layout_toLeftOf="@+id/buttonPrint"
                android:layout_toEndOf="@+id/buttonConnect"
                android:layout_toRightOf="@+id/buttonConnect"
                android:text="Disconnect"
                android:textSize="12sp"
                tools:ignore="HardcodedText" />
...
