...
                android:typeface="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText,RtlHardcoded" />

            <Button
                android:id="@+id/buttonLocation"
                android:layout_width="233dp"
                android:layout_height="38dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
...
                android:typeface="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText,RtlHardcoded" />

            <Button
                android:id="@+id/buttonScan1"
                android:layout_width="233dp"
                android:layout_height="38dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
...
                android:typeface="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText,RtlHardcoded" />

            <EditText
                android:id="@+id/editTextLicenseNo"
                android:layout_width="284dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
...
                android:textAlignment="center"
                android:textSize="20sp"
                tools:ignore="Autofill,HardcodedText,LabelFor,RtlHardcoded,SpUsage" />


            <Button
                android:id="@+id/buttonOk"
                android:layout_width="40dp"
                android:layout_height="37dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="193dp"
...
                android:layout_marginLeft="35dp"
                android:layout_marginTop="103dp"
                android:layout_marginEnd="17dp"
                android:layout_marginRight="17dp"
                android:layout_toStartOf="@+id/checkBoUV"
                android:layout_toLeftOf="@+id/checkBoUV"
                android:layout_toEndOf="@+id/checkBoxDO"
                android:layout_toRightOf="@+id/checkBoxDO"
                android:text="Safe Keeping"
                android:textSize="10sp"
                android:textStyle="bold"
                android:typeface="normal"
                app:layout_constraintStart_toStartOf="parent"
...
                android:typeface="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText,RtlHardcoded" />

            <Button
                android:id="@+id/buttonEnter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="407dp"
...
                android:typeface="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText,RtlHardcoded" />

            <EditText
                android:id="@+id/editTextPlateNo"
                android:layout_width="248dp"
                android:layout_height="47dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
...
                android:typeface="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText,RtlHardcoded" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="377dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText,RtlHardcoded" />


            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="375dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
...
                android:typeface="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText,RtlHardcoded" />

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
...
